Implement task API
